--- a/fornecedor/pom.xml
+++ b/fornecedor/pom.xml
@@ -52,6 +52,12 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-sleuth</artifactId>
 	    </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-hystrix
+			</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
