Criando database para loja e habilitando Bulkhead

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,33 @@
 version: '3.3'
 
 services:
-    db:
+    db_fornecedor:
       image: mysql:5.7
       restart: always
       environment:
         MYSQL_DATABASE: 'fornecedor'
-        # So you don't have to use root, but you can if you like
         MYSQL_USER: 'user'
-        # You can use whatever password you like
         MYSQL_PASSWORD: 'root'
-        # Password for root access
         MYSQL_ROOT_PASSWORD: 'root'
       ports:
-        # <Port exposed> : < MySQL Port running inside container>
         - '3306:3306'
       expose:
-        # Opens port 3306 on the container
         - '3306'
-        # Where our data will be persisted
-      volumes:
-        - .data/:/var/lib/mysql/
+        volumes:
+        - .data/fornecedor/:/var/lib/mysql/
+
+    db_loja:
+      image: mysql:5.7
+      restart: always
+      environment:
+        MYSQL_DATABASE: 'loja'
+        MYSQL_USER: 'user'
+       MYSQL_PASSWORD: 'root'
+        MYSQL_ROOT_PASSWORD: 'root'
+      ports:
+        - '3307:3306'
+      expose:
+       - '3307'
+        volumes:
+        - .data/loja/:/var/lib/mysql/
 
