--- a/loja/src/main/resources/application.yml
+++ b/loja/src/main/resources/application.yml
@@ -1,8 +1,22 @@
 
-server:  port: 8080
+server:
+  port: 8080
 
-spring:  application:    name: 'loja'
+spring:
+  application:
+    name: 'loja'
+  datasource:
+    password: root
+    username: root
+    url: jdbc:mysql://localhost:3307/loja
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
-eureka:  client:    register-with-eureka: true
+eureka:
+  client:
+    register-with-eureka: true
     fetch-registry: true
-    service-url:      defaultZone: http://localhost:8761/eureka
+    service-url:
+      defaultZone: http://localhost:8761/eureka
