--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,18 @@ services:
       - '3307'
     volumes:
     - .data/loja/:/var/lib/mysql/
+
+  db_transportador:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'transportador'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: 'root'
+    ports:
+      - '3308:3306'
+    expose:
+      - '3308'
+    volumes:
+    - .data/transportador/:/var/lib/mysql/
