--- a/fornecedor/pom.xml
+++ b/fornecedor/pom.xml
@@ -58,6 +58,14 @@
 				spring-cloud-starter-netflix-hystrix
 			</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-oauth2</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
