--- a/fornecedor/src/main/resources/application.yml
+++ b/fornecedor/src/main/resources/application.yml
@@ -20,3 +20,10 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8088/user
+      
