--- a/loja/src/main/resources/application.yml
+++ b/loja/src/main/resources/application.yml
@@ -20,3 +20,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+      
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8088/user
