Compartilhando headers de segurança da API Gateway e aumentando tempo de conexão

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -14,3 +14,9 @@ management:
       exposure:
         include:
         - "routes"
+zuul:
+  sensitive-headers:
+  - Cookie, Authorization
+  host:
+    socket-timeout-millis: 200000
+    connect-timeout-millis: 200000
